--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "tilda-client",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,15 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "axios": "^0.27.2",
+    "lodash.omit": "^4.5.0",
+    "next": "^12.1.6",
+    "qrcode.react": "^3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-select": "^5.3.2",
+    "react-toastify": "^9.0.5",
+    "reoverlay": "^1.0.3",
+    "validator": "^13.7.0",
+    "zustand": "^4.0.0-rc.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.7.4",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
